# ConsentFlow-

./: .env.example  .gitignore  Dockerfile  README.md  backend.md  consentflow_landing.html  docker-compose.yml  files.md  frontend.md  mlflow.db  presentation.md  project-summary.md  pyproject.toml
consentflow/: anonymizer.py  inference_gate.py
consentflow-backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
consentflow-backend/consentflow/: policy_auditor.py
consentflow-backend/consentflow/app/: config.py  main.py  models.py
consentflow-backend/consentflow/app/routers/: consent.py  dashboard.py  policy.py
consentflow-backend/consentflow/migrations/: 003_seed_demo_user.sql
consentflow-backend/tests/: test_policy_auditor.py
consentflow-frontend/: README.md  package-lock.json  package.json
consentflow-frontend/app/: layout.tsx  page.tsx
consentflow-frontend/app/audit/: page.tsx
consentflow-frontend/app/consent/: page.tsx
consentflow-frontend/app/css/: landing.css
consentflow-frontend/app/dashboard/: page.tsx
consentflow-frontend/app/infer/: infer.css  page.tsx
consentflow-frontend/app/policy/: page.tsx  policy.css
consentflow-frontend/app/users/: page.tsx
consentflow-frontend/app/webhook/: page.tsx
consentflow-frontend/components/dashboard/: HealthWidget.tsx  MetricCard.tsx  SidebarHealth.tsx
consentflow-frontend/components/layout/: Navbar.tsx  Sidebar.css  Sidebar.tsx
consentflow-frontend/components/magicui/: animated-beam.tsx
consentflow-frontend/hooks/: useAuditTrail.ts  useConsent.ts  useHealth.ts  useHealthStatus.ts  usePolicyAuditor.ts  useUsers.ts
consentflow-frontend/lib/: axios.ts
consentflow-frontend/types/: api.ts
consentflow/app/: config.py  main.py  models.py
consentflow/app/routers/: users.py  webhook.py
(+22 files in other folders)
